# spm.cmake

./: LICENSE  Readme.md  spm.cmake
cmake/: cli.cmake  helper.cmake  init.cmake  integration.cmake  package.cmake  require.cmake  root.cmake  template.cmake
cmake/cli/: dispatch_command.cmake
cmake/common/: git.cmake  helpers.cmake
cmake/integration/: finalize.cmake  package.cmake  require.cmake
docs/: SPM Design.md
templates/app/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  packages.cmake  spm  spm.cmd
templates/app/src/: main.cc
templates/lib/: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
templates/lib/src/PROJECT_SLUG/: dummy.cc  dummy.hh  fwd.hh
